--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "eject": "react-scripts eject",
     "storybook": "start-storybook -p 6006 -s public",
     "build-storybook": "build-storybook -s public",
-    "chromatic": "npx chromatic --project-token=e558ae3c579a"
+    "chromatic": "chromatic --exit-zero-on-changes"
+  }
   },
   "eslintConfig": {
     "extends": [
